--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Reno-a-Book-of-Short-Stories-and-Information_5951
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Stratton, Lilyan
     gutenberg_agent_id: '1897'
     url: http://www.gutenberg.org/2009/agents/1897
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5951#Reno-a-Book-of-Short-Stories-and-Information
 gutenberg_issued: '2004-06-01'
 gutenberg_type: Text
 identifiers:
